# project4

./: README.md  pyproject.toml
data/: products.json
src/: base_product.py  exceptions.py  lawngrass.py  main.py  print_mixin.py  product_iterator.py  smartphone.py
tests/: conftest.py  test_exceptions.py  test_lawngrass.py  test_main.py  test_print_mixin.py  test_product_iterator.py  test_smartphone.py
