[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["miplo <miplotnova@mail.ru>"]
readme = "README.tropmd"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
